<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_create_note"
    android:orientation="vertical"
    android:padding="20dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/create_note_description">

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/Create"
        />

    <EditText
        android:id="@+id/et_note_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView1"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/Title"
        android:text=""
        android:maxLines="1"
        android:maxLength="30"
        android:inputType="text"
        android:focusableInTouchMode="true"
        />

    <EditText
        android:id="@+id/et_note_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_note_create_save"
        android:layout_below="@+id/et_note_title"
        android:layout_marginTop="15dp"
        android:maxLength="2000"
        android:ems="10"
        android:hint="@string/Body_hint"
        android:gravity="top"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/bt_note_create_save"
        android:layout_width="70pt"
        android:layout_height="20pt"
        android:layout_alignParentBottom = "true"
        android:layout_alignParentRight = "true"
        android:text="@string/Confirm_bt"
        />

    <Button
        android:id="@+id/bt_note_create_cancel"
        android:layout_width="70pt"
        android:layout_height="20pt"
        android:layout_alignParentBottom = "true"
        android:layout_alignParentLeft = "true"
        android:text="@string/Abort_bt"
        />

</RelativeLayout>