<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backGround">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_sort_by_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_title"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_sort_by_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_creationdate"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_sort_by_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_size"
                android:layout_weight="1"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_delete_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "DELETE"
            android:layout_weight="1"/>
    </LinearLayout>

        <SearchView
            android:id="@+id/search_view_find_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/list_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="2dp"></ListView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="center|bottom"
        android:src="@drawable/ic_add"
        android:layout_margin="20sp"/>

</android.support.design.widget.CoordinatorLayout>