<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_edit_options">
    <item android:id="@+id/option_share"
        android:title="@string/share_note"/>
    <item android:id="@+id/option_delete"
        android:title="@string/delete_note"/>
    <item android:id="@+id/text_to_speech"
        android:title="Read note"/>
</menu>