...
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/Edit"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/tv_note_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/created_at_location"
            android:lines="2"
            android:layout_marginLeft="5sp"
...

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/et_edit_note_title"
        android:layout_above="@id/bt_edit_note_create_cancel"
        android:layout_marginTop="15dp"
        android:maxLength="2000"
        android:ems="10"
        android:hint="@string/Body_hint"
        android:gravity="top"
        android:inputType="textMultiLine">
...
