<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@color/backGround">

        <TextView
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="tmp"/>
        <TextView
            android:id="@+id/note_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="8dp"
            android:maxLines="2"
            android:paddingRight="30dp"
            android:textSize="18sp"
            android:text="tmp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true">

        <CheckBox
            android:id="@+id/cb_pinned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@layout/checkbox_pin" />

    </LinearLayout>

</RelativeLayout>